<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language"
            android:orderInCategory="100"
            app:itemTextAppearance="@style/MenuTextAppearance"
            android:fontFamily="@font/font_nav"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate"
            android:orderInCategory="200"
            app:itemTextAppearance="@style/MenuTextAppearance"
            android:iconTint="#D0D5DD"
            android:fontFamily="@font/font_nav"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            android:orderInCategory="300"
            app:itemTextAppearance="@style/MenuTextAppearance"
            android:fontFamily="@font/font_nav"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:fontFamily="@font/font_nav"
            android:title="@string/feedback"
            android:orderInCategory="400"
            app:itemTextAppearance="@style/MenuTextAppearance"
            android:iconTint="#D0D5DD"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/icpolicy"
            android:iconTint="#D0D5DD"
            android:fontFamily="@font/font_nav"
            android:title="@string/policy"
            app:itemTextAppearance="@style/MenuTextAppearance"
            android:orderInCategory="500"
            app:showAsAction="never"/>

</menu>