<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cstSelect"
    android:layout_gravity="center"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/custom_dialog_choose"
        android:layout_marginHorizontal="24dp"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:paddingVertical="24dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans"
            android:text="@string/select_option"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="16sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_select"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="32dp"
            android:id="@+id/cst_LockScreen"
            android:layout_marginTop="24dp">

            <ImageView
                android:id="@+id/imgLockScreen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_lockscr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/lock_screen"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/imgLockScreen"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imgradioLockScreen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_tickselect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_select"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="32dp"
            android:id="@+id/cst_HomeScreen"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/imgHomeScreen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_homescr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/home_screen"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/imgHomeScreen"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imgradioHomeScreen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_tickselect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_select"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="32dp"
            android:id="@+id/cst_BothScreen"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/imgBothScreen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_bothscr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/both"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/imgBothScreen"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imgradioBothScreen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_tickselect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSelectOptions"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="32dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_set_wallpaper"
            android:textColor="#ffffff"
            android:text="@string/ok"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
