<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Intro.IntroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#101828">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerIntro"
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:layout_marginTop="52dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/plusjakartasans"
        android:gravity="center"
        android:text="@string/transparency"
        android:textStyle="bold"
        android:textColor="#EAECF0"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/viewPagerIntro"
        />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        android:fontFamily="@font/plusjakartasans"
        android:layout_marginTop="8dp"
        android:text="@string/reveal_your_beautiful"
        android:textColor="#D0D5DD"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
         />

<!--    <View-->
<!--        android:id="@+id/viewIntro"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toTopOf="@id/llDot"-->
<!--        android:layout_width="match_parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvContent"-->
<!--        android:layout_height="50dp"/>-->

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/llDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvContent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/dot_select" />

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/dot_not_select" />

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/dot_not_select" />



    </LinearLayout>

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:paddingVertical="5dp"
        android:paddingStart="5dp"
        android:text="@string/next"
        android:textColor="#4073F6"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/llDot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/llDot" />

    <View
        android:id="@+id/ads"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>